# filter-paper

./: .gitignore  README.md  cache_https___connect.biorxiv.org_biorxiv_xml.php_subject_neuroscience.json  cache_https___www.cell.com_neuron_current.rss.json  cache_https___www.nature.com_nature_current_issue_rss.json  cache_https___www.nature.com_ncomms.rss.json  cache_https___www.nature.com_neuro_current.rss.json  cache_https___www.nature.com_nrn.rss.json  cache_https___www.science.org_action_showFeed_type_etoc_feed_rss_jc_science.json  pyproject.toml
filter_paper/: constants.py  main.py
notebooks/: tests.ipynb
